--- a/.gitignore
+++ b/.gitignore
@@ -1,65 +1,4 @@
-# History files
-.Rhistory
-.Rapp.history
-
-# Session Data files
-.RData
-
-# Example code in package build process
-*-Ex.R
-
-# Output files from R CMD build
-/*.tar.gz
-
-# Output files from R CMD check
-/*.Rcheck/
-
-# produced vignettes
-vignettes/*.html
-vignettes/*.pdf
-
-# OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
-.httr-oauth
-
-# knitr and R markdown default cache directories
-/*_cache/
-/cache/
-
-# Temporary files created by R markdown
-*.utf8.md
-*.knit.md
-
-# Shiny token, see https://shiny.rstudio.com/articles/shinyapps.html
-rsconnect/
-
-# Big data files 
-
-**/Big_files
-
-# Log files (specially for the ones got from MSsstats processing steps)
-
-*.log
-sessionInfo.txt
-
-# R objects that could be too big 
-
-*.Rda
-
-# Output data 
-
-**/MSstats_formated_files
-**/MSstats_Output_data
-*/Msstats_Outout_data
-*.pdf
-*.csv
-*.txt
-**/MSstats_Exploration_Outputs
-*.xlsx
-
-
-# Specific exploratory scripts 
-
-check_diff_baser_n_readr_dataload_for_msstats.R
-quick_tests.R
-
 .Rproj.user
+.Rhistory
+.RData
+.Ruserdata
